--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ base {
 }
 
 repositories {
+	mavenCentral()
+	maven { url 'https://maven.shedaniel.me/' }
+	maven { url "https://maven.terraformersmc.com/releases/" }
 	// Add repositories to retrieve artifacts from in here.
 	// You should only use this when depending on other mods because
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
@@ -29,7 +32,10 @@ dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
+	implementation 'com.google.code.gson:gson:2.13.2'
+	modApi("me.shedaniel.cloth:cloth-config-fabric:20.0.149") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	
