--- a/gradle.properties
+++ b/gradle.properties
@@ -7,15 +7,15 @@ org.gradle.configuration-cache=false
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.3
-yarn_mappings=1.21.3+build.2
+minecraft_version=1.21.1
+yarn_mappings=1.21.1+build.3
 loader_version=0.17.3
 loom_version=1.12-SNAPSHOT
 
 # Mod Properties
-mod_version=Beta-1.0.0
+mod_version=1.0.0.211
 maven_group=com.worldreloader
 archives_base_name=worldreloader
 
 # Dependencies
-fabric_version=0.107.0+1.21.3
+fabric_version=0.103.0+1.21.1
