--- a/versions/1.21.1.properties
+++ b/versions/1.21.1.properties
@@ -8,7 +8,7 @@ org.gradle.configuration-cache=false
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21.1
-yarn_mappings=1.21.1+build3
+yarn_mappings=1.21.1+build.3
 loader_version=0.17.3
 loom_version=1.12-SNAPSHOT
 
