--- a/build.gradle
+++ b/build.gradle
@@ -114,7 +114,7 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 repositories {
     maven { url = "https://maven.minecraftforge.net/" }
     // 添加 Modrinth Maven 仓库
-    maven { url = "https://api.modrinth.com/maven" }
+    maven { url "https://maven.shedaniel.me/" }
     mavenCentral()
     // Put repositories for dependencies here
     // ForgeGradle automatically adds the Forge maven and Maven Central for you
@@ -133,10 +133,11 @@ dependencies {
     // If the group id is "net.minecraft" and the artifact id is one of ["client", "server", "joined"],
     // then special handling is done to allow a setup of a vanilla dependency without the use of an external repository.
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
+    api(fg.deobf("me.shedaniel.cloth:cloth-config-forge:11.1.136"))
     //implementation fg.deobf("me.shedaniel.cloth:cloth-config-forge:11.1.136-forge")
-    implementation fg.deobf("curse.maven:cloth-config-348521:5729105")
-    //runtimeOnly fg.deobf("me.shedaniel.cloth:cloth-config:${cloth_config_version}")
-    //compileOnly fg.deobf("me.shedaniel.cloth:cloth-config:${cloth_config_version}")
+    //implementation fg.deobf("curse.maven:cloth-config-348521:5729105")
+    //runtimeOnly fg.deobf("me.shedaniel.cloth:cloth-config-forge:${cloth_config_version}")
+    //compileOnly fg.deobf("me.shedaniel.cloth:cloth-config-forge:${cloth_config_version}")
     //implementation fg.deobf("maven.modrinth:cloth-config:11.1.136-forge")
     //implementation fg.deobf("curse.maven:cloth-config-348521:5729105")
 
